--- a/m/mo/mon/moneyarticlelibrary.com.html
+++ b/m/mo/mon/moneyarticlelibrary.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the moneyarticlelibrary.com privacy policy that was archived on 2013-08-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130808125215id_/http%3A//www.moneyarticlelibrary.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the moneyarticlelibrary.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214155455id_/http%3A//www.moneyarticlelibrary.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -50,7 +50,7 @@ location.href = mail_str;
 	   <td><img src="http://www.moneyarticlelibrary.com/images/spacer.gif" width="60" height="12" alt="spacer.gif - 1kb" border="0"></td>
 
        <td>
-<a href="http://www.proffiliateprofits.com/" target="blank"><img src="http://marketingarticlelibrary.com/fileave/ban-ahs-recruiting-200x125_catchthewave.gif" border="0" alt="Top Commissions, Great Re-orders, Best Support &amp; Promotions"></a>
+<center><a href="http://www.wellness-weight.com" target="new"><img src="http://www.marketingarticlelibrary.com/fileave/Wellness-Weight-ProfilePic.jpg"><br><b>CLICK FOR DAILY WELLNESS NEWS</b></a></center>
 
 
      </td>
@@ -92,7 +92,6 @@ Registerd User?<br>
 <tr>
 
 <td class="maincontentcell"> <!-- Starting of Main Content -->
-
 <h1>Money Article Library™ Privacy Policy</h1>
 
 <h2>Our Address &amp; Contact Information</h2>
@@ -209,18 +208,8 @@ with MoneyArticleLibrary.com!<br>
 
 <hr><b><center><script type="text/javascript" src="http://ezinearticles.com/widget/inc/eawidget.js"></script><script type="text/javascript" src="http://ezinearticles.com/widget/widgetfetch.php?theme=100&amp;cheader=bb2020&amp;cborder=d0d0d0&amp;cbackground=f1f1f1&amp;ctopic=f1f1f1&amp;ctopictext=000000&amp;ch3=bb2020&amp;cfooter=f1f1f1&amp;cfootertext=000000&amp;mem=7995&amp;height=300&amp;width=180&amp;articles=15&amp;authorid=Thom Reece&amp;bio=1"></script></center><br>
 
-<hr><center><script type="text/javascript"><!--
-amazon_ad_tag="moneybooklibrary-20";
-amazon_ad_width="160";
-amazon_ad_height="600";
-amazon_color_background="EFEFCC";
-amazon_color_border="1F6E19";
-amazon_color_logo="F3E608";
-amazon_color_link="2C1FEB";
-amazon_ad_logo="hide";
-amazon_ad_link_target="new";
-amazon_ad_title="MONEY BOOK LIBRARY"; //--></script>
-<script type="text/javascript" src="http://www.assoc-amazon.com/s/asw.js"></script></center>
+<hr>
+<div id="widgetmain" style="text-align:left;font-family:Arial, Helvetica, sans-serif;margin:auto;overflow-y:auto;overflow-x:hidden;width:200px;background-color:#FFFFFF; border:1px solid #333333;"><div id="rsswidget" style="height:600px;"><iframe src="https://www.jvzoo.com/assets/widget/jam-widgy.php?time=1390856726335&amp;aid=27455&amp;w=200&amp;h=600&amp;bc=333333&amp;bw=1&amp;bgc=FFFFFF&amp;m=8&amp;it=true&amp;t=JVZoo Ads&amp;tc=FF0F0F&amp;ts=20&amp;tb=transparent&amp;lc=0000FF&amp;ls=14&amp;lb=false&amp;id=true&amp;dc=333333&amp;ds=14" border="0" hspace="0" vspace="0" frameborder="no" marginwidth="0" marginheight="0" style="border:0; padding:0; margin:0; width:200px; height:600px;" id="rssOutput">Reading RSS Feed ...</iframe></div><div style="text-align:right;padding:3px;margin-bottom:0;border-top:1px solid #333333;" id="widgetbottom"><span style="font-size:80%"><a href="http://www.jvzoo.com/register/27455">Powered by JVZoo.com</a>&nbsp;</span><br></div></div>
 </b></center></center></div><b>
 
 
@@ -242,25 +231,14 @@ amazon_ad_title="MONEY BOOK LIBRARY"; //--></script>
 <a href="http://www.e-comprofits.com" target="blank">
 <img src="http://www.moneyarticlelibrary.com/images/ban-omg-ani-125x125-red.gif" width="125" height="125" alt="ONLINE MARKETING PROFIT PRODUCING TOOLS FOR INTERNET MARKETERS " border="0"></a><br><br>
 
-<hr>
-
-<center><script type="text/javascript"><!--
-amazon_ad_tag="moneybooklibrary-20";
-amazon_ad_width="160";
-amazon_ad_height="600";
-amazon_color_background="EFEFCC";
-amazon_color_border="1F6E19";
-amazon_color_logo="F3E608";
-amazon_color_link="2C1FEB";
-amazon_ad_logo="hide";
-amazon_ad_link_target="new";
-amazon_ad_title="MONEY BOOK LIBRARY"; //--></script>
-<script type="text/javascript" src="http://www.assoc-amazon.com/s/asw.js"></script></center>
+<hr><center><br><a href="http://www.booksbythomreece.com" target="new"><img src="http://www.marketingarticlelibrary.com/fileave/ban-booksbythom125x125.jpg" <="" a=""><br><hr>
 
 
 
-</center>
-</center></b></td>
+
+
+</a></center><a href="http://www.booksbythomreece.com" target="new">
+</a></center></center></b></td>
 </tr>
 </tbody></table>
  <!-- End of Navigator -->
@@ -268,28 +246,23 @@ amazon_ad_title="MONEY BOOK LIBRARY"; //--></script>
 
 
 
+<br>
 
+<center><a href="http://articlevideorobot.com/hop/OMG" target="new"><img src="&#10;http://www.marketingarticlelibrary.com/fileave/ban-AVR2-Set2-728by90.gif"></a></center><br>
+
+<center><a href="http://www.booksbythomreece.com" target="new"><img src="http://marketingarticlelibrary.com/fileave/ban-books-tips-tricks-red-726x93.gif" border="0" alt=""></a></center><br>
+
+<img src="http://www.socialmaximizer.com/affiliate/aftra.php?af=86508&amp;ad=80&amp;p=7" width="1px" height="1px" alt="">
+<a href="http://www.socialmaximizer.com/af.php?af=86508&amp;ad=80&amp;p=7"><img src="http://www.directorymaximizer.com/affiliate/banners/80-2-7-89232.jpeg" alt=""></a>
 
 <div style="text-align:center;">
 
-<hr><br><center><a href="http://www.proffiliateprofits.com" target="new"><b>CLICK HERE NOW FOR FREE DETAILS ON THE NEWEST AND MOST PROFITABLE <i>WELLNESS AFFILIATE PROGRAM</i> FEATURING <u>LIFETIME COMMISSIONS</u> AND THE <u>HIGHEST RE-ORDER RATE IN THE INDUSTRY</u>.</b></a></center><br><br>
+<hr><br><center>
+</center><br><br>
 <hr><br>
-<center><script type="text/javascript"><!--
-amazon_ad_tag="moneybooklibrary-20";
-amazon_ad_width="728";
-amazon_ad_height="90";
-amazon_color_background="EFEFCC";
-amazon_color_border="1F6E19";
-amazon_color_logo="F3E608";
-amazon_color_link="2C1FEB";
-amazon_ad_logo="hide";
-amazon_ad_link_target="new";
-amazon_ad_title="MONEY BOOK LIBRARY"; //--></script>
-<script type="text/javascript" src="http://www.assoc-amazon.com/s/asw.js"></script></center>
+<center><font size="2"><b>DISCLOSURE--NOTICE OF AFFILIATE/ADVERTISER STATUS</b>:  <br>The owner of this website is an affiliate/advertiser for providers of products and/or services listed on this website and may receive compensation if you purchase those products and/or services.  All referrals are made in good faith for sources believed to be credible and that offer good value. In all cases the decision to purchase, or not to purchase, should be made after performing your own due-diligence on the efficacy and suitability of the product or service being offered. By clicking on product/service links on this website you agree to hold this website's owners harmless in the event the product/service is found to be unsuitable for any reason. All claims for refunds must be made to the supplier/vendor of any product/service you purchase from any link on this site..</font></center><hr>
 
-<hr><center><font size="2"><b>DISCLOSURE--NOTICE OF AFFILIATE/ADVERTISER STATUS</b>:  <br>The owner of this website is an affiliate/advertiser for providers of products and/or services listed on this website and may receive compensation if you purchase those products and/or services.  All referrals are made in good faith for sources believed to be credible and that offer good value. In all cases the decision to purchase, or not to purchase, should be made after performing your own due-diligence on the efficacy and suitability of the product or service being offered. By clicking on product/service links on this website you agree to hold this website's owners harmless in the event the product/service is found to be unsuitable for any reason. All claims for refunds must be made to the supplier/vendor of any product/service you purchase from any link on this site..</font></center><hr>
-
-<div class="footer">© 2006-2012 <a href="http://www.moneyarticlelibrary.com">
+<div class="footer">© 2006-2013 <a href="http://www.moneyarticlelibrary.com">
 <span style="text-decoration: none">Money Article Library™</span></a>
 
 All rights protected.<br>
