--- a/s/sm/smi/smileygamer.com.html
+++ b/s/sm/smi/smileygamer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the smileygamer.com privacy policy that was archived on 2013-08-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130807211233id_/http%3A//www.smileygamer.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the smileygamer.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214161508id_/http%3A//www.smileygamer.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Privacy Policy - Smiley Gamer</title>
@@ -100,7 +100,7 @@ div#sliderad {
 
 <script src="http://www.smileygamer.com/templates/arcade.js" type="text/javascript"></script>
 
-<script type="text/javascript">document.write("<scr" + "ipt type='text/javascript' src='http://www.epicgameads.com/ads/popjs.php?id=YKb04gJs&cb=" + new Date().getTime() + "'></scri" + "pt>");</script><script type="text/javascript" src="http://www.epicgameads.com/ads/popjs.php?id=YKb04gJs&amp;cb=1580503758745"></script>
+<script type="text/javascript">document.write("<scr" + "ipt type='text/javascript' src='http://www.epicgameads.com/ads/popjs.php?id=YKb04gJs&cb=" + new Date().getTime() + "'></scri" + "pt>");</script><script type="text/javascript" src="http://www.epicgameads.com/ads/popjs.php?id=YKb04gJs&amp;cb=1580503758609"></script>
 </head>
 
 <body>
@@ -116,15 +116,6 @@ pageTracker._trackPageview();
 
 <!-- floating banner -->
 
-<div id="slideradwide">     	
-      <div class="slideClose">
-      	<a onclick="javascript:document.getElementById('slideradwide').style.display='none';return true;" style="cursor: pointer; color:#ffffff;"> 
-      CLOSE ✖</a>
-	  </div>
-      <div class="slideCodeContainer">
-     	<a href="http://www.smileygamer.com/scripts/ios/redirect.php?from=sgadslider&amp;to=shapematcherfree" target="_blank"><img src="http://www.smileygamer.com/images/iphone/shapematcher-ad.jpg" border="0/"></a>
-  	 </div>
-</div>
 
 <!-- /floating banner -->
 
@@ -193,7 +184,7 @@ google_ad_height = 600;
 <script language="javascript"><!--
 document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/1172028/0/154/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/1172028/0/154/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1580503758786"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/1172028/0/154/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/1172028/0/154/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="160" height="600"></a></noscript>
+</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/1172028/0/154/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1580503758669"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/1172028/0/154/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/1172028/0/154/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="160" height="600"></a></noscript>
 <!-- End of JavaScript Tag -->
 <img src="http://www.smileygamer.com/images/clrdot.gif" width="100" height="8" border="0"><br>
 </div> 
@@ -262,6 +253,38 @@ You can also contact that address for any other serious issues.</p>
 <a href="http://www.facebook.com/SmileyGamer" title="SmileyGamer Facebook fan page" target="_TOP"><img src="http://www.smileygamer.com/images/facebook-logo.jpg" style="border: 0px;"></a>
 <!-- Facebook Badge END -->
 </td></tr>
+<tr>
+             <td>
+<table class="category" width="100%" cellspacing="0" cellpadding="0">
+		<tbody><tr>
+			<td class="tll"></td>
+			<td>
+				<table width="100%" cellspacing="0" cellpadding="0">
+					<tbody><tr>
+						<td class="tl"></td>
+						<td class="top"><span class="cellTitles">Just Played</span></td>
+						<td class="tr"></td>
+					</tr>
+				</tbody></table>
+			</td>
+			<td class="trr"></td>
+		</tr>
+		<tr>
+			<td class="left"></td>
+			<td class="center"><table class="innerTable" border="0" cellspacing="0" cellpadding="0"><tbody><tr>
+					<td><a href="http://www.smileygamer.com/games/17225/santas-candy.html" title="Santa's Candy"><img class="gameimg" src="http://www.smileygamer.com/games/images/santascandy.jpg" width="100" height="75" border="2" alt="Santa's Candy"></a></td>
+					</tr><tr>
+					<td><a class="rightListSmallText" href="http://www.smileygamer.com/playedgames.html">All played games</a></td>
+					</tr></tbody></table></td>
+			<td class="right"></td>
+		</tr>
+		<tr>
+			<td class="bl"></td>
+			<td class="bottom"></td>
+			<td class="br"></td>
+		</tr>
+	</tbody></table>				</td>
+            </tr>
 <tr><td>
 <table class="category" width="100%" cellspacing="0" cellpadding="0">
 		<tbody><tr>
@@ -280,15 +303,15 @@ You can also contact that address for any other serious issues.</p>
 		<tr>
 			<td class="left"></td>
 			<td class="center"><table class="innerTable" border="0" cellspacing="0" cellpadding="0"><tbody><tr>
-			<td><a href="http://www.smileygamer.com/games/12942/the-holy-ankh.html" title="The Holy Ankh"><img class="gameimg" src="http://www.smileygamer.com/games/images/holyankh-120x90.jpg" width="100" height="75" border="2" alt="The Holy Ankh"></a></td>
+			<td><a href="http://www.smileygamer.com/games/9975/rise-of-atlantis.html" title="Rise Of Atlantis"><img class="gameimg" src="http://www.smileygamer.com/games/images/riseofatlantis.jpg" width="100" height="75" border="2" alt="Rise Of Atlantis"></a></td>
 			</tr><tr>
-			<td><a href="http://www.smileygamer.com/games/2708/monkey-trouble-2.html" title="Monkey Trouble 2"><img class="gameimg" src="http://www.smileygamer.com/games/images/monkeytrouble2-big.jpg" width="100" height="75" border="2" alt="Monkey Trouble 2"></a></td>
+			<td><a href="http://www.smileygamer.com/games/11086/crystal-sets.html" title="Crystal Sets"><img class="gameimg" src="http://www.smileygamer.com/games/images/crystalsets-120x90.jpg" width="100" height="75" border="2" alt="Crystal Sets"></a></td>
 			</tr><tr>
-			<td><a href="http://www.smileygamer.com/games/14365/detective-files-3-strange-new-world.html" title="Detective Files 3: Strange New World"><img class="gameimg" src="http://www.smileygamer.com/games/images/Detective_3_HO_LiveUp.jpg" width="100" height="75" border="2" alt="Detective Files 3: Strange New World"></a></td>
+			<td><a href="http://www.smileygamer.com/games/14824/gemlink.html" title="Gemlink"><img class="gameimg" src="http://www.smileygamer.com/games/images/gemlink-120x90.jpg" width="100" height="75" border="2" alt="Gemlink"></a></td>
 			</tr><tr>
-			<td><a href="http://www.smileygamer.com/games/4649/legend-of-the-golden-mask.html" title="Legend Of The Golden Mask"><img class="gameimg" src="http://www.smileygamer.com/games/images/GoldenMask-big.jpg" width="100" height="75" border="2" alt="Legend Of The Golden Mask"></a></td>
+			<td><a href="http://www.smileygamer.com/games/17203/billions-of-baubles.html" title="Billions Of Baubles"><img class="gameimg" src="http://www.smileygamer.com/games/images/billionsofbaubles-120x90.jpg" width="100" height="75" border="2" alt="Billions Of Baubles"></a></td>
 			</tr><tr>
-			<td><a href="http://www.smileygamer.com/games/14286/winter-slider.html" title="Winter Slider"><img class="gameimg" src="http://www.smileygamer.com/games/images/winterslider-120x90.jpg" width="100" height="75" border="2" alt="Winter Slider"></a></td>
+			<td><a href="http://www.smileygamer.com/games/657/smiley-puzzle.html" title="Smiley Puzzle"><img class="gameimg" src="http://www.smileygamer.com/games/images/smileypuzzle-120x90.jpg" width="100" height="75" border="2" alt="Smiley Puzzle"></a></td>
 			</tr><tr>
 					<td><a class="rightListSmallText" href="http://www.smileygamer.com/archive/?order=recentpop">Show All</a></td>
 					</tr></tbody></table></td>
@@ -316,28 +339,20 @@ You can also contact that address for any other serious issues.</p>
 		<tr>
 			<td class="left"></td>
 			<td class="center"><div class="rightListSmallText">
-<a class="TopLinks" href="http://www.kostenlosspielen.biz" target="_blank">www.kostenlosspielen.biz</a><br>
-<a class="TopLinks" href="http://www.funnygames.co.uk" target="_blank">Funny Games</a><br>
-<a class="TopLinks" href="http://www.girlgames1.com/" target="_blank">Girl Games</a><br>
-<a class="TopLinks" href="http://www.roundgames.com" target="_blank">Play Games</a><br>
-<a class="TopLinks" href="http://www.tastyplay.com" target="_blank">Tastyplay</a><br>
 <a class="TopLinks" href="http://www.sportgamesarena.com" target="_blank">Sport Games</a><br>
 <a class="TopLinks" href="http://www.match3.com/difference-games.html" target="_blank">Spot the Difference Games</a><br>
-<a class="TopLinks" href="http://www.gametrier.com" target="_blank">New Game Downloads</a><br>
-<a class="TopLinks" href="http://gamefuss.com" target="_blank">Free Games Online</a><br>
-<a class="TopLinks" href="http://www.ebog.com" target="_blank">Best online games</a><br>
 <a class="TopLinks" href="http://www.horse-games.org" target="_blank">Horse Games</a><br>
 <a class="TopLinks" href="http://www.bestonlinekidsgames.com" target="_blank">Online Games For Kids</a><br>
 <a class="TopLinks" href="http://www.hackedarcadegames.com" target="_blank">Hacked Games</a><br>
 <a class="TopLinks" href="http://www.enemy.com" target="_blank">Hacked Games</a><br>
 	<a class="TopLinks" href="http://www.giochi-gratis.eu" target="_blank">giochi</a><br>
-	<a href="http://www.fungames.pro" target="_blank">fun games</a><br>
-	<a href="http://www.2playergames.co" target="_blank">2 player games</a><br>
-	<a href="http://www.freegameswow.com" target="_blank">Free Games Wow</a><br>
-	<a href="http://www.playit-online.de" target="_blank">Playit Online</a><br>
-	<a href="http://www.1001mahjonggames.com" target="_blank">Mahjong Games</a><br>
-	<a href="http://www.1001footballgames.com" target="_blank">1001 Football games</a><br>
-	<a href="http://www.dressupgames8.com/" target="_blank">Dress Up Games</a><br><br>
+	<a class="TopLinks" href="http://www.playit-online.de" target="_blank">Playit Online</a><br>
+	<a class="TopLinks" href="http://www.1001mahjonggames.com" target="_blank">Mahjong Games</a><br>
+	<a class="TopLinks" href="http://www.1001footballgames.com" target="_blank">1001 Football games</a><br>
+	<a class="TopLinks" href="http://www.dressupgames8.com/" target="_blank">Dress Up Games</a><br>
+	<a class="TopLinks" href="http://thegamerstop.com" target="_blank">TheGamerStop.com</a><br>
+	<a class="TopLinks" href="http://www.gamesfreak.net/" target="blank">GamesFreak.net</a><br>
+	<a class="TopLinks" href="http://www.gamessus.com/" target="blank">Ben10</a><br><br>
 <a class="TopLinks" href="http://www.smileygamer.com/contact.html">&gt;&gt;your link here&lt;&lt;</a>
 </div></td>
 			<td class="right"></td>
@@ -356,7 +371,7 @@ You can also contact that address for any other serious issues.</p>
 <script language="javascript"><!--
 document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/1172029/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc='+new Date().getTime()+'"></scri'+'pt>');
 //-->
-</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/1172029/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1580503758810"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/1172029/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/1172029/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="728" height="90"></a></noscript>
+</script><script language="javascript1.1" src="http://ads.intergi.com/addyn/3.0/5205/1172029/0/225/ADTECH;loc=100;target=_blank;key=key1+key2+key3+key4;grp=[group];misc=1580503758694"></script><noscript><a href="http://ads.intergi.com/adlink/3.0/5205/1172029/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" target="_blank"><img src="http://ads.intergi.com/adserv/3.0/5205/1172029/0/225/ADTECH;loc=300;key=key1+key2+key3+key4;grp=[group]" border="0" width="728" height="90"></a></noscript>
 <!-- End of JavaScript Tag -->
 </div>
 	  			<h1>Play Free Online Games, Match 3 Games and Time Management Games on Smiley Gamer</h1>
@@ -375,7 +390,7 @@ document.write('<scr'+'ipt language="javascript1.1" src="http://ads.intergi.com/
 	  				<a href="http://www.smileygamer.com/tags/122/hidden-object-games.html">hidden object games</a>&nbsp;&nbsp;&nbsp;&nbsp;
 	  				<a href="http://www.smileygamer.com/tags/231/link-games.html">link games</a>
 	  			</p>
-  				<p class="footerText"><a href="http://www.smileygamer.com/freecontent.html" title="Free content for your website">Webmasters: free games for your website</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.smileygamer.com/index.php?action=submit">Submit a game</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.smileygamer.com/contact.html" title="About SmileyGamer - Contact Us">Contact us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.smileygamer.com/privacy.html">Privacy Policy</a><br>
+  				<p class="footerText"><a href="http://www.smileygamer.com/freecontent.html" title="Free content for your website">Webmasters: free games for your website</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.smileygamer.com/contact.html" title="About SmileyGamer - Contact Us">Contact us</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://www.smileygamer.com/privacy.html">Privacy Policy</a><br>
   				Copyright 2007-2013 SmileyGamer.com</p>
   			</td></tr></tbody></table>
 		</td>
