--- a/r/ri/ris/rishtonkasansar.com.html
+++ b/r/ri/ris/rishtonkasansar.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rishtonkasansar.com privacy policy that was archived on 2013-08-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130816222945id_/http%3A//www.rishtonkasansar.com/terms.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rishtonkasansar.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214182631id_/http%3A//www.rishtonkasansar.com/terms.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head id="Head1"><title>
 	
@@ -241,6 +241,13 @@ google_ad_height = 600;
                                                                employs are expert in that and satisfy them very easliy. we don't have any other 
                                                                branches . we have only sole business so we aware from other those who use our 
                                                                name .</p>
+<p align="left" style="font-family: Arial; font-size: 12px; color: #333333; width: 500px;">
+
+Rishtonkasansar.com reserves the right to advertise/publish your personal Details,photos,contact details etc. of member till member not inform about his/her profile maturity.
+</p>
+<p align="left" style="font-family: Arial; font-size: 12px; color: #333333; width: 500px;">
+Rishtonkasansar.com is not responsible regarding any online changes made by member in his/her profile.
+</p>
                                                            <p align="left" style="font-family: Arial; font-size: 12px; color: #333333; width: 500px;">
                                                                Rishtonkasansar.com take advance money then we provide service . Rishton ka 
                                                                sansar has a right to change any information available on the website . The 
