--- a/y/ya/yar/yarnmarket.com.html
+++ b/y/ya/yar/yarnmarket.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the yarnmarket.com privacy policy that was archived on 2013-08-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130821115720id_/http%3A//www.yarnmarket.com/generate/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yarnmarket.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214185118id_/http%3A//www.yarnmarket.com/generate/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<title>Privacy Policy</title>
-	<!-- {ts '2013-08-21 07:54:35'} -->
+	<!-- {ts '2014-02-14 13:45:17'} -->
 	<meta name="ROBOTS" content="NOODP">
 	<meta name="Description" content="Products on sale at the Yarn Market.">
 	<meta name="Keywords" content="yarn,knitting,knit,needle,craft">
@@ -193,7 +193,8 @@ var google_conversion_value = 0;
 	<span class="text_small">
 	<b>Outside of the USA:</b></span>
 	<span class="prod_header_smaller">1-614-861-7223</span><br>
-	<span class="text_small">(9AM-5PM ET<br>Monday - Friday)</span>
+	<span class="text_small">(10AM-5PM ET<br>
+	Monday - Friday)</span>
 	
 	</p></td>
 	<td width="13"><img src="/art/pix.gif" alt="" width="20" height="1" border="0"></td>
@@ -220,7 +221,7 @@ outside marketing, research or other company or companies.</b></p>
 exchanged, transferred, or given to any other company for any reason
 whatsoever, without the consent of the customer, other than for the express
 purpose of delivering the purchased product or service requested by the
-customer.</p>
+customer with the exception of a change in ownership of the company.</p>
 <p>Your credit card information is safely and securely stored
 on our servers which are not accessible by any unauthorized users. When your credit
 card is charged, our payment gateway provider, <a style="font-size:12px;font-weight:bolder;" href="http://www.authorize.net" target="_blank">Authorize.net</a>, keeps your
