--- a/n/ne/nex/nextdaypets.com.html
+++ b/n/ne/nex/nextdaypets.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the nextdaypets.com privacy policy that was archived on 2013-10-31.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131031041022id_/http%3A//www.nextdaypets.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the nextdaypets.com privacy policy that was archived on 2014-02-14.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140214193401id_/http%3A//www.nextdaypets.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html id="MasterPageHtmlTag" xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="https://www.facebook.com/2008/fbml"><head>
 <title>
@@ -23,12 +23,12 @@
 <link rel="apple-touch-startup-image" href="//d3o47n6kn1r59u.cloudfront.net/images/bootstrap/ios/splash-ipad-portrait.png" media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)">
 <link rel="apple-touch-startup-image" href="//d3o47n6kn1r59u.cloudfront.net/images/bootstrap/ios/splash-iphone.png" media="screen and (max-device-width: 320px)">
 <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="/assets/css/style2.css">
+<link rel="stylesheet" type="text/css" href="/assets/css/style2.css?v=12032013">
 <link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
 <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans:400,300">
 
 
-    <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>    
+    <script async="" type="text/javascript" src="https://www.googletagservices.com/tag/js/gpt.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>    
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
         <script src="/assets/js/respond.min.js"></script>
@@ -55,6 +55,30 @@
             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
         })();
     </script>
+
+    <script type="text/javascript">
+        var googletag = googletag || {};
+        googletag.cmd = googletag.cmd || [];
+        (function () {
+            var gads = document.createElement('script');
+            gads.async = true;
+            gads.type = 'text/javascript';
+            var useSSL = 'https:' == document.location.protocol;
+            gads.src = (useSSL ? 'https:' : 'http:') + '//www.googletagservices.com/tag/js/gpt.js';
+            var node = document.getElementsByTagName('script')[0];
+            node.parentNode.insertBefore(gads, node);
+        })();
+    </script>
+
+    <script type="text/javascript">
+        googletag.cmd.push(function () {
+            googletag.defineSlot('/1012883/1x1', [1, 1], 'div-gpt-ad-1386105950975-0').addService(googletag.pubads());
+            googletag.defineOutOfPageSlot('/1012883/1x1', 'div-gpt-ad-1386105950975-0-oop').addService(googletag.pubads());
+            googletag.pubads().enableSingleRequest();
+            googletag.enableServices();
+        });
+    </script>
+
     <meta property="fb:app_id" name="fb:app_id" content="112751788742669"></head>
 <body id="MasterPageBodyTag">
     <form method="post" action="/privacy.aspx" id="Form1">
@@ -158,12 +182,12 @@
             </div>
 
             <div id="logo" class="container">
-                <iframe id="iFrame_728x90" width="728" marginwidth="0" frameborder="0" class="tabletWide smallDesktop largeDesktop banner" height="90" marginheight="0" style="padding:0;float:right;margin-bottom:5px;" scrolling="no" data-src="/assets/includes/728x90.aspx" allowtransparency="true"></iframe> 
+                <iframe id="iFrame_728x90" marginwidth="0" frameborder="0" width="728" class="tabletWide smallDesktop largeDesktop banner" height="90" marginheight="0" scrolling="no" style="padding:0;float:right;margin-bottom:5px;" data-src="/assets/includes/728x90.aspx" allowtransparency="true"></iframe> 
 
                 <a class="brand hidden-phone hidden-tablet" href="http://www.nextdaypets.com/"><span class="logoDesktop"></span></a>
 
                 <div id="iframe3" class="marginCenter" style="width:320px;">
-                    <iframe id="iFrame_320x50" width="320" marginwidth="0" frameborder="0" class="mobile tablet banner" height="50" marginheight="0" style="padding:0;" scrolling="no" data-src="/assets/includes/320x50.aspx" allowtransparency="true"></iframe> 
+                    <iframe id="iFrame_320x50" marginwidth="0" frameborder="0" width="320" class="mobile tablet banner" height="50" marginheight="0" scrolling="no" style="padding:0;" data-src="/assets/includes/320x50.aspx" allowtransparency="true"></iframe> 
                 </div>
             </div>
 
@@ -245,6 +269,21 @@ In the course of serving advertisements to this site, our third-party advertiser
 
         </div>
 
+
+            <div id="pnlMobile">
+                <!-- 1x1 -->
+                <div id="div-gpt-ad-1386105950975-0" style="width:1px; height:1px;">
+                    <script type="text/javascript">
+                        googletag.cmd.push(function () { googletag.display('div-gpt-ad-1386105950975-0'); });
+                    </script>
+                </div>
+                <!-- 1x1 out-of-page -->
+                <div id="div-gpt-ad-1386105950975-0-oop" style="height:1px;">
+                    <script type="text/javascript">
+                        googletag.cmd.push(function () { googletag.display('div-gpt-ad-1386105950975-0-oop'); });
+                    </script>
+                </div>
+            </div>
         </div>
 
 
@@ -330,7 +369,6 @@ In the course of serving advertisements to this site, our third-party advertiser
 
 
     
-
 
 
 
